--- a/style.css
+++ b/style.css
@@ -171,3 +171,8 @@ h6{
     font-size: 42px;
     background-color: #ff5959;
 }
+h5{
+    font-family: cursive;
+    font-size: 25px;
+    text-align: center; 
+}
